// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`opens form 1`] = `
<div>
  <span
    className="text-middle"
  >
    background_tasks.number_of_workers
    <strong
      className="little-spacer-left"
    >
      1
    </strong>
  </span>
  <Tooltip
    overlay="background_tasks.change_number_of_workers"
    placement="bottom"
  >
    <EditButton
      className="js-edit button-small spacer-left"
      onClick={[Function]}
    />
  </Tooltip>
</div>
`;

exports[`opens form 2`] = `
<div>
  <span
    className="text-middle"
  >
    background_tasks.number_of_workers
    <strong
      className="little-spacer-left"
    >
      1
    </strong>
  </span>
  <Tooltip
    overlay="background_tasks.change_number_of_workers"
    placement="bottom"
  >
    <EditButton
      className="js-edit button-small spacer-left"
      onClick={[Function]}
    />
  </Tooltip>
  <WorkersForm
    onClose={[Function]}
    workerCount={1}
  />
</div>
`;

exports[`renders 1`] = `
<div>
  <span
    className="text-middle"
  >
    background_tasks.number_of_workers
    <i
      className="spinner little-spacer-left"
    />
  </span>
</div>
`;

exports[`renders 2`] = `
<div>
  <span
    className="text-middle"
  >
    background_tasks.number_of_workers
    <strong
      className="little-spacer-left"
    >
      1
    </strong>
  </span>
  <Tooltip
    overlay="background_tasks.change_number_of_workers"
    placement="bottom"
  >
    <EditButton
      className="js-edit button-small spacer-left"
      onClick={[Function]}
    />
  </Tooltip>
</div>
`;

exports[`renders 3`] = `
<div>
  <Tooltip
    overlay="background_tasks.number_of_workers.warning"
    placement="bottom"
  >
    <i
      className="icon-alert-warn little-spacer-right bt-workers-warning-icon"
    />
  </Tooltip>
  <span
    className="text-middle"
  >
    background_tasks.number_of_workers
    <strong
      className="little-spacer-left"
    >
      2
    </strong>
  </span>
  <Tooltip
    overlay="background_tasks.change_number_of_workers"
    placement="bottom"
  >
    <EditButton
      className="js-edit button-small spacer-left"
      onClick={[Function]}
    />
  </Tooltip>
</div>
`;

exports[`renders 4`] = `
<div>
  <Tooltip
    overlay="background_tasks.number_of_workers.warning"
    placement="bottom"
  >
    <i
      className="icon-alert-warn little-spacer-right bt-workers-warning-icon"
    />
  </Tooltip>
  <span
    className="text-middle"
  >
    background_tasks.number_of_workers
    <strong
      className="little-spacer-left"
    >
      2
    </strong>
  </span>
  <span
    className="spacer-left"
  >
    <a
      className="link-no-underline"
      href="#"
      onClick={[Function]}
    >
      <HelpIcon
        className="text-text-bottom"
        fill="#cdcdcd"
      />
    </a>
    <BubblePopupHelper
      isOpen={false}
      popup={<NoWorkersSupportPopup />}
      position="bottomright"
      togglePopup={[Function]}
    />
  </span>
</div>
`;

exports[`updates worker count 1`] = `
<div>
  <span
    className="text-middle"
  >
    background_tasks.number_of_workers
    <strong
      className="little-spacer-left"
    >
      1
    </strong>
  </span>
  <Tooltip
    overlay="background_tasks.change_number_of_workers"
    placement="bottom"
  >
    <EditButton
      className="js-edit button-small spacer-left"
      onClick={[Function]}
    />
  </Tooltip>
  <WorkersForm
    onClose={[Function]}
    workerCount={1}
  />
</div>
`;

exports[`updates worker count 2`] = `
<div>
  <Tooltip
    overlay="background_tasks.number_of_workers.warning"
    placement="bottom"
  >
    <i
      className="icon-alert-warn little-spacer-right bt-workers-warning-icon"
    />
  </Tooltip>
  <span
    className="text-middle"
  >
    background_tasks.number_of_workers
    <strong
      className="little-spacer-left"
    >
      7
    </strong>
  </span>
  <Tooltip
    overlay="background_tasks.change_number_of_workers"
    placement="bottom"
  >
    <EditButton
      className="js-edit button-small spacer-left"
      onClick={[Function]}
    />
  </Tooltip>
</div>
`;
